[package]
name = "rts_simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
crossbeam = "0.8.4"
spin_sleep = "1.3.3"
log = "0.4"
average = "0.16.0"
statrs = "0.18.0"
env_logger = "0.11.8"
parking_lot = "0.12.5"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
#serde = "1.0.228"
serde = { version = "1.0", features = ["derive"] }
csv = "1.4.0"
criterion = "0.8.1"
pidgeon = "0.2.2"
pid = "4.0.0"
thread-priority = "3.0.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend","bitmap_backend"]}
tiny_http = "0.12"
tokio = { version = "1.48.0", features = ["full"] }
polars = { version = "0.48", features = ["lazy", "csv", "strings","dtype-datetime","dtype-date","dtype-time","dtype-duration"] }
plotly = "0.13.5"
affinity = "0.1.2"
libc = "0.2.178"
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1.17.0"
core_affinity = "0.8.3"




[[bin]]
name = "analyze"
path = "src/analysis/cpu_load_data_analysis.rs"
[[bin]]
name = "sync_vs_async"
path = "src/analysis/sync_vs_async.rs"


[features]
bench = []

[[bench]]
#name = "sync_contention_bench"
#name = "sensor_bench"
#name = "processing_bench"


#componet_b
#name ="pid_bench"
#name ="multi_actuator_bench"
name ="feedback_bench"
#name = "actuator_deadline_bench"
#name = "receiver_latency_bench"
harness = false







